--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 .d3-tip {
-  line-height: 1;
-  font-weight: bold;
+  line-height: 1.5;
   padding: 12px;
   background: rgba(0, 0, 0, 0.8);
   color: #fff;
@@ -32,11 +31,16 @@ body {
   font: 10px sans-serif;
 }
 
-.axis path,
+.axis path {
+  fill: none;
+  stroke: none;
+  shape-rendering: crispEdges;
+}
+
 .axis line {
   fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
+  stroke: black;
+  stroke-dasharray: 2, 2;
 }
 
 .dot {
