--- a/style.css
+++ b/style.css
@@ -1,6 +1,38 @@
+body {
+  background-color: rgba(236,160,166,0.08);
+  text-align: center;
+  font-family: Helvetica, sans-serif;
+}
+
 p {
   font-size: 14px;
 }
+
+.annotation {
+  margin: 20px 0px;
+}
+
+#wrapper {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.label {
+  font-size: 100%;
+}
+
+.stats {
+  display: inline-block;
+  padding: 10px;
+  background-color: white;
+}
+
+.stat-highlight {
+  font-size: 14px;
+  font-weight: bold;
+  color:#eca0a6;
+}
+
 
 .d3-tip {
   line-height: 1.5;
@@ -31,12 +63,9 @@ p {
 }
 
 
-body {
-  font-family: Georgia,Times,Times New Roman,serif;
-}
-
 svg {
-  font: 10px sans-serif;
+  font-size: 10px;
+  font-family: Helvetica, sans-serif;
 }
 
 .btn {
@@ -63,16 +92,19 @@ svg {
   /*stroke: #000;*/
 }
 
+.category-selection button {
+  border-radius: 0px;
+}
+
 .category-selection button.selected,
 .category-selection button:hover,
 .category-selection button:active,
 .category-selection button:focus {
-  background-color: #FF0064;
+  background-color: #eca0a6;
   color: white;
 }
 .category-selection.btn-toolbar {
   padding: 10px;
-  background-color: #fcfcfc;
 }
 
 .category-selection span {
@@ -82,8 +114,8 @@ svg {
 }
 
 span.category-highlight {
-  color:#FF0064;
-  border-bottom: 3px solid #FF0064;
+  color: #eca0a6;
+  border-bottom: 3px solid #eca0a6;
   font-weight: bold;
 }
 
