--- a/style.css
+++ b/style.css
@@ -42,9 +42,10 @@ p {
 .d3-tip {
     line-height: 1.5;
     padding: 10px;
-    background: rgba(0, 0, 0, 0.8);
-    color: #fff;
+    background: rgba(255, 255, 255, 0.8);
+    color: #000;
     border-radius: 2px;
+    box-shadow: 1px 1px 1px #ccc;
 }
 
 
@@ -57,7 +58,7 @@ p {
     font-size: 10px;
     width: 100%;
     line-height: 1;
-    color: rgba(0, 0, 0, 0.8);
+    color: rgba(255, 255, 255, 0.8);
     content: "\25BC";
     position: absolute;
     text-align: center;
