--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ p {
     font-size: 14px;
     font-weight: bold;
     color: #eca0a6;
-    margin: 10px;
+    margin: 10px 10px 10px 0px;
 }
 
 .d3-tip {
