--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+@font-face {
+ font-family: "Big Miller";
+ src: url("fonts/BigMiller-Roman.otf");
+}
+
+@font-face {
+ font-family: "Big Miller Bold";
+ src: url("fonts/BigMiller-Black.otf");
+}
+
+
+@font-face {
+ font-family: "Big Miller Italic";
+ src: url("fonts/BigMiller-Italic.otf");
+}
+
 body {
     background-color: rgba(236, 160, 166, 0.08);
     text-align: center;
@@ -52,7 +68,7 @@ p {
 
 /* Creates a small triangle extender for the tooltip */
 
-.d3-tip:after {
+/*.d3-tip:after {
     box-sizing: border-box;
     display: inline;
     font-size: 10px;
@@ -62,18 +78,30 @@ p {
     content: "\25BC";
     position: absolute;
     text-align: center;
-}
+}*/
 
 
 
 /* Style northward tooltips differently */
-
+/*
 .d3-tip.n:after {
     margin: -1px 0 0 0;
     top: 100%;
     left: 0;
+}*/
+
+.tip-nominee {
+ font-family: "Big Miller Bold";
 }
 
+.tip-category {
+ font-family: "Big Miller Bold";
+}
+
+.tip-name {
+ font-family: "Big Miller Italic";
+ font-size: 14px;
+}
 
 svg {
     font-size: 10px;
@@ -105,19 +133,6 @@ svg {
 
 .marker {
     /*stroke: #000;*/
-}
-
-.category-selection {
-    margin-bottom: 20px;
-}
-
-.category-selection button {
-    border-radius: 0px;
-    padding: 10px;
-    margin: 0px;
-    width: 19%;
-    border: none;
-    background-color: white;
 }
 
 .legend li {
@@ -156,6 +171,19 @@ background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0
 .male {
     background-color: #dcdcdc;
 }
+.category-selection {
+    margin-bottom: 20px;
+}
+
+.category-selection button {
+    border-radius: 0px;
+    padding: 10px;
+    margin: 0px;
+    width: 19%;
+    border: none;
+    background-color: white;
+    text-transform: uppercase;
+}
 
 .category-selection button.selected,
 .category-selection button:hover,
@@ -163,6 +191,7 @@ background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0
 .category-selection button:focus {
     background-color: #eca0a6;
     color: white;
+    font-weight: bold;
 }
 
 .category-selection span {
