--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ p {
     font-size: 12px;
 }
 
+h2 {
+     font-family: "Big Miller Bold";
+}
+
 .annotation {
     margin: 20px 0px;
 }
@@ -61,7 +65,7 @@ p {
     background: rgba(255, 255, 255, 0.8);
     color: #000;
     border-radius: 2px;
-    box-shadow: 1px 1px 1px #ccc;
+    line-height: 1.1;
 }
 
 
@@ -90,17 +94,17 @@ p {
     left: 0;
 }*/
 
-.tip-nominee {
+.tip-name {
  font-family: "Big Miller Bold";
+  font-size: 16px;
 }
 
 .tip-category {
  font-family: "Big Miller Bold";
 }
 
-.tip-name {
+.tip-movie {
  font-family: "Big Miller Italic";
- font-size: 14px;
 }
 
 svg {
@@ -164,8 +168,8 @@ svg {
 }
 
 .female-win {
-   background-color: #eca0a6;
-background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23f8f7fb' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+    background-color: #eca0a6;
+background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23a53a4f' fill-opacity='0.83' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
 }
 
 .male {
@@ -198,6 +202,10 @@ background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0
     float: left;
     margin-top: 5px;
     margin-right: 10px;
+}
+
+.headline-date {
+    font-family: Helvetica, sans-serif;
 }
 
 
