--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 @font-face {
- font-family: "Big Miller";
- src: url("fonts/BigMiller-Roman.otf");
+    font-family: "Big Miller";
+    src: url("fonts/BigMiller-Roman.otf");
 }
 
 @font-face {
- font-family: "Big Miller Bold";
- src: url("fonts/BigMiller-Black.otf");
+    font-family: "Big Miller Bold";
+    src: url("fonts/BigMiller-Black.otf");
 }
 
 
 @font-face {
- font-family: "Big Miller Italic";
- src: url("fonts/BigMiller-Italic.otf");
+    font-family: "Big Miller Italic";
+    src: url("fonts/BigMiller-Italic.otf");
 }
 
 body {
@@ -19,6 +19,8 @@ body {
     text-align: center;
     font-family: Helvetica, sans-serif;
     font-size: 12px;
+    margin: 0;
+    padding: 0;
 }
 
 p {
@@ -26,7 +28,7 @@ p {
 }
 
 h2 {
-     font-family: "Big Miller Bold";
+    font-family: "Big Miller Bold";
 }
 
 .annotation {
@@ -70,7 +72,9 @@ h2 {
 
 
 
+
 /* Creates a small triangle extender for the tooltip */
+
 
 /*.d3-tip:after {
     box-sizing: border-box;
@@ -85,8 +89,9 @@ h2 {
 }*/
 
 
-
 /* Style northward tooltips differently */
+
+
 /*
 .d3-tip.n:after {
     margin: -1px 0 0 0;
@@ -95,16 +100,16 @@ h2 {
 }*/
 
 .tip-name {
- font-family: "Big Miller Bold";
-  font-size: 16px;
+    font-family: "Big Miller Bold";
+    font-size: 16px;
 }
 
 .tip-category {
- font-family: "Big Miller Bold";
+    font-family: "Big Miller Bold";
 }
 
 .tip-movie {
- font-family: "Big Miller Italic";
+    font-family: "Big Miller Italic";
 }
 
 svg {
@@ -121,6 +126,7 @@ svg {
     stroke: none;
     shape-rendering: crispEdges;
 }
+
 
 
 
@@ -168,13 +174,14 @@ svg {
 }
 
 .female-win {
-    background-color: #eca0a6;
-background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23a53a4f' fill-opacity='0.83' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+    background-color: #ea626d;
+    background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23eca0a6' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
 }
 
 .male {
     background-color: #dcdcdc;
 }
+
 .category-selection {
     margin-bottom: 20px;
 }
@@ -206,24 +213,31 @@ background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0
 
 .headline-date {
     font-family: Helvetica, sans-serif;
+    font-weight: normal;
+    font-size: 12px;
 }
 
 
 @media (max-width: 400px) {
     .annotation,
     .stats {
-        font-size: 12px;
+        font-size: 10px;
     }
 
     .category-selection button {
         border-radius: 0px;
         padding: 10px;
         margin: 0px;
-        width: 17%;
+        width: 15%;
         border: none;
+        font-size: 10px;
     }
 
     .category-selection button[value="best-screenplay"] {
-        width: 21%;
+        width: 23%;
+    }
+
+    .category-selection button[value="best-director"] {
+        width: 19%;
     }
 }
