tooltips position themselves dynamically and dont get cut off

--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ svg {
 }
 
 .female-win {
-    background-color: #ea626d;
+    background-color: #e81760;
     background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23eca0a6' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
 }
 
@@ -230,7 +230,7 @@ svg {
         margin: 0px;
         width: 15%;
         border: none;
-        font-size: 10px;
+        font-size: 9px;
     }
 
     .category-selection button[value="best-screenplay"] {
