--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ svg {
     list-style: none;
     padding-left: 0px;
     text-align: center;
-    width: 460px;
+    /*width: 460px;*/
     margin: 20px auto 0px auto;
     display: block;
     height: 30px;
